--- a/src/Components/PaymentsTable/paymentsTable.css
+++ b/src/Components/PaymentsTable/paymentsTable.css
@@ -4,3 +4,23 @@
   align-items: center;
   width: 100%;
 }
+.hidden{
+  position: absolute;
+  display: none;
+  background-color:gray;
+}
+.not-hidden{
+  position:absolute;
+  right: 0;
+  display: block;
+  background-color:rgb(239, 239, 239);
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.payments-transacions-main-Icon-flex{
+  width: 50px;
+  position:absolute;
+  right: 0;
+  top: 30px;
+}
